--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -369,7 +369,7 @@ h2 {
 }
 
 h3 {
-  font-size: 3.4rem;
+  font-size: 3.4rem !important;
   line-height: 3.9rem;
 }
 
@@ -14788,8 +14788,8 @@ header .header-cart-icon .cart-count {
 
 .swiper-button-next,
 .swiper-button-prev {
-  height: 40px;
-  width: 40px;
+  height: 40px !important;
+  width: 40px !important;
   line-height: 40px;
   margin: 0;
   transform: translateY(-50%);
