--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,7 +16,7 @@ body {
   line-height: 30px;
   font-weight: 400;
   color: #828282;
-  font-family: Roboto, sans-serif;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   padding: 0;
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -339,11 +339,11 @@ button:hover {
 }
 
 .alt-font {
-  font-family: Poppins, sans-serif;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
 }
 
 .main-font {
-  font-family: Roboto, sans-serif !important;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
 }
 
 h1,
@@ -3312,7 +3312,7 @@ input[type="radio"]:checked + label span:after {
   border-radius: 0;
   text-transform: uppercase;
   width: auto;
-  font-family: Poppins, sans-serif;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   font-weight: 500;
 }
 
@@ -11777,7 +11777,7 @@ a.likes-count:hover {
 
 .mfp-close {
   font-size: 30px;
-  font-family: Poppins, sans-serif;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   font-weight: 300;
 }
 
@@ -12076,12 +12076,6 @@ button.mfp-close {
 
 .nav-item > .dropdown-toggle {
   display: none;
-}
-
-.dropdown-toggle:after {
-  visibility: hidden;
-  width: 0;
-  height: 0;
 }
 
 .mCustomScrollbar .mCSB_container {
@@ -14227,7 +14221,7 @@ header .header-cart-icon .cart-count {
   display: -ms-flexbox;
   display: flex;
   z-index: 1;
-  font-family: Poppins, sans-serif;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   color: #fff;
   font-size: 18px;
   line-height: 22px;
@@ -17029,7 +17023,7 @@ a img.aligncenter {
   font-size: 11px;
   padding: 4px 13px 5px;
   text-transform: uppercase;
-  font-family: Poppins, sans-serif;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   font-weight: 500;
   border-radius: 2px;
 }
@@ -22259,7 +22253,7 @@ footer .instafeed-grid.gutter-double-extra-large {
   padding: 0 !important;
   font-size: 15px !important;
   font-weight: 400 !important;
-  font-family: Poppins, sans-serif !important;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif !important;
 }
 
 .footer-spa-salon.footer-dark,
