--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,8 +75,7 @@ section {
   display: block;
 }
 body {
-  font-family: Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   font-size: 0.8125rem;
   font-weight: 400;
   line-height: 1.5;
@@ -5301,6 +5300,7 @@ input[type="submit"].btn-block {
   display: inline-block;
   vertical-align: 0.255em;
   content: "";
+  margin-top: 15px;
 }
 [dir] .dropdown-toggle:after {
   border-top: 0.3em solid;
@@ -9824,8 +9824,7 @@ a.close.disabled {
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -9976,8 +9975,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 304px;
-  font-family: Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -24846,7 +24844,7 @@ h5 {
 .headings-family-lato h4,
 .headings-family-lato h5,
 .headings-family-lato h6 {
-  font-family: Lato, Helvetica Neue, Arial, sans-serif;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   font-weight: 700;
 }
 .headings-family-oswald .h1,
@@ -24861,7 +24859,7 @@ h5 {
 .headings-family-oswald h4,
 .headings-family-oswald h5,
 .headings-family-oswald h6 {
-  font-family: Oswald, Helvetica Neue, Arial, sans-serif;
+  font-family: "Exo 2", Helvetica Neue, Arial, sans-serif;
   font-weight: 500;
 }
 .lead {
